# Hackathon_II

./: .gitignore  README.md  docker-compose.yml
Phase-I/: README.md  pyproject.toml
Phase-I/src/: __init__.py  main.py
Phase-II/: .gitignore  README.md  nginx.conf  package.json  readme.md
Phase-II/backend/: alembic.ini  main.py  requirements.txt  task.db  test_auth.py  test_tasks.py
Phase-II/frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
Phase-III/: .env.example  README.md
Phase-IV/: COMPLETION-NOTE.md  README.md
Phase-IV/backend/: Dockerfile  check_tables.py  debug_chat.py  debug_import.py  focused_test.py  main.py  pyproject.toml  requirements-dev.txt  test_backend_logic.py  test_chat_endpoint.py  test_full_backend.py  verify_auth.py
Phase-IV/backend/alembic/versions/: 001_initial_tables.py
Phase-IV/backend/api/: auth.py  tasks_api.py
Phase-IV/backend/core/: config.py
Phase-IV/backend/services/: task_service.py  user_service.py
Phase-IV/backend/src/: database.py  security.py  validation.py
Phase-IV/backend/src/mcp/: server.py  todo_tools.py
Phase-IV/backend/src/models/: task.py  user.py
Phase-IV/backend/src/schemas/: user_schemas.py
Phase-IV/backend/src/services/: auth_service.py  chat_service.py  conversation_service.py  task_service.py
Phase-IV/backend/src/task_agents/: agent_simple.py  agent_streaming.py  todo_agent.py
Phase-IV/backend/src/utils/: password.py
Phase-IV/backend/tests/: api_test.py
backend/: .env  requirements.txt  test_main.py
frontend/: .env.local
(+543 files in other folders)
